Fixed issue with mobile screens. Had to correct an issue with the header not working properly on mobile by manipulating the position and zindex.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
 
 header {
 height: 75px;
+width: 100%;
 background-color: #ffffff;
 margin-top: 0;
 padding: 0;
@@ -15,6 +16,11 @@ border-width: 0px 0px 1px 0px;
 border-color: #4aaaa5;
 border-bottom-style: solid;
 font-family: Georgia, 'Times New Roman', Times, serif;
+position: fixed;
+top: 0;
+left: 0;
+right: 0;
+z-index: 100;
 
 }
 
@@ -46,7 +52,6 @@ font-family: Georgia, 'Times New Roman', Times, serif;
     height: 75px;
     width: 960px;
     margin-left: 100px;
-    margin-right: 100px;
 }
 
 .studentbio {
@@ -63,20 +68,19 @@ font-family: Georgia, 'Times New Roman', Times, serif;
     color: #4aaaa5;
     width: 300px;
     height: 75px;
-    padding: 0 15px 0 15px;
 
 }
 
 .container {
     width: 960px;
     margin-left: 100px;
-    margin-right: 100px;
-    margin-top: 20px;
+    margin-top: 100px;
     border-bottom-color: #dddddd;
+    position: relative;
 
 }
 .aboutme {
-    width: 640px;
+    width: 629px;
     height: 500px;
     float: left;
     border: .5px solid #dddddd;
@@ -86,7 +90,7 @@ font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .connect {
-    width: 260px;
+    width: 249px;
     height: 250px;
     float: right;
     border: .5px solid #dddddd;
